------------
mtPaint NEWS
------------

Here is a summary of the main changes in this release (see handbook for full details):

3.41	2013-??-??
	* Background layer position now can be changed via Ctrl+arrows or layers window spinbuttons, like any other layer
	* Shift and Shift+Ctrl now constrain selection box width/height when resizing it by clicking and dragging
	* New image format PMM (Portable MultiMap) added for interoperable storage and exchange of images : See handbook section A.2 for details
	* XPM files with 65-92 colours are now saved with smaller size
	* Raw RGB palette files (6-bit PAL and 8-bit ACT) can now be loaded/saved via the Palette menu
	* Animation cycles can now specify sequence steps as containing several layers, or none : See handbook section 9.3.3 for details
	* Committing paste when changing tool is now enabled by default
	* Saving an image now commits paste if auto commit mode is enabled
	* Undo system now uses a bit less memory
	* Support for compiling with giflib 5 added
	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
	* BUGFIX - Gradient button no longer fails to show current gradient mode after showing settings toolbar
	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle
	* BUGFIX - Problem with layers list in inactive dock tab sometimes not updating is now eliminated
	* BUGFIX - All keyboard shortcuts now work in Image View mode, as they should
	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale
	* BUGFIX - Animation cycling now doesn't skip over the last frame of a GIF loaded into layers
	* BUGFIX - Background layer is now made large enough to accommodate all frames when loading animation into layers
	* BUGFIX - Animation cycles are now properly updated when layers are reordered, duplicated or deleted
	* BUGFIX - Command line switches beyond the first one are now parsed properly